--- a/less/style.less
+++ b/less/style.less
@@ -52,7 +52,7 @@ pre {
    SlideShow
    ========================================================================== */
 
-#AllRASContainer {
+#AllRAS-slideshow {
   padding: 0.5em 0.4em 0.2em 0.5em;
   .bg(#FFF);
   .rounded(4px);
