updage gh-pages

--- a/less/style.less
+++ b/less/style.less
@@ -21,6 +21,14 @@ h2 {
   color: #2c3e50;
   font-size: 2em;
   text-shadow: 1px 1px 1px #FFF;
+  border-bottom: 2px solid rgba(22, 160, 133, 0.8);
+}
+
+h3 {
+  .NotoBold;
+  color: #2c3e50;
+  font-size: 1.7em;
+  text-shadow: 1px 1px 1px #FFF;
 }
 
 ul { padding: 0; margin: 0; }
@@ -34,9 +42,9 @@ img {
 }
 
 pre {
-  .bg(rgba(22, 160, 133, 0.8));
+  .bg(#FFF);
   .rounded(4px);
-  color: #FFF;
+  color: #16a085;
   padding: 1em 1.5em;
   font-size: 1.2em;
   margin: 1em 0 0;
@@ -52,7 +60,7 @@ pre {
    SlideShow
    ========================================================================== */
 
-#AllRAS-slideshow {
+.allRas {
   padding: 0.5em 0.4em 0.2em 0.5em;
   .bg(#FFF);
   .rounded(4px);
